--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <img src="Images/YohannsNigatu.jpg" width="300" height="400" alt="">
     <h2>Yohanns Nigatu</h2>
     <ul>
-        <li><a href="HomePage.html">Lab0 : HomePage</a></li>
-        <li><a href="HomePage.html">Lab1 : AboutMe</a></li>
-        <li><a href="HomePage.html">Lab2 : Recipe</a></li>
-        <li><a href="HomePage.html">Lab3 : MovieReview</a></li>
+        <li><a href="index.html">Lab0 : HomePage</a></li>
+        <li><a href="index.html">Lab1 : AboutMe</a></li>
+        <li><a href="index.html">Lab2 : Recipe</a></li>
+        <li><a href="index.html">Lab3 : MovieReview</a></li>
     </ul>
     
 </body>
