--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li><a href="index.html">Lab2 : Recipe</a></li>
         <li><a href="index.html">Lab3 : MovieReview</a></li>
     </ul>
+
+    <a href="http://validator.w3.org/check/referer"> <img 
+        src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
     
 </body>
 </html>
