--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <li><a href="index.html">Lab3 : MovieReview</a></li>
     </ul>
 
-    <a href="https://validator.w3.org/check/referer"> <img 
-        src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
+    <a href="https://validator.w3.org/check/referer"> validate</a>
     
 </body>
 </html>
