--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
         <li><a href="index.html">Lab3 : MovieReview</a></li>
     </ul>
 
-    <p>
-        <a href="http://validator.w3.org/check?uri=referer"
-           onclick="this.href='http://validator.w3.org/check?uri=' + document.URL"><img
-            src="http://www.w3.org/Icons/valid-xhtml10"
-            alt="Valid XHTML 1.0!" height="31" width="88" /></a>
-      </p>
+    <a href="http://validator.w3.org/check/referer"> <img 
+        src="http://www.w3.org/Icons/valid-xhtml10" alt="html validator"/></a>
     
 </body>
 </html>
