--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="index.html">Lab3 : MovieReview</a></li>
     </ul>
 
-    <a href="http://validator.w3.org/check/referer"> <img 
+    <a href="http://validator.w3.org/check"> <img 
         src="http://www.w3.org/Icons/valid-xhtml10" alt="html validator"/></a>
     
 </body>
