--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Yohanns Nigatu</h2>
     <ul>
         <li><a href="index.html">Lab0 : HomePage</a></li>
-        <li><a href="index.html">Lab1 : AboutMe</a></li>
+        <li><a href="aboutme.html">Lab1 : AboutMe</a></li>
         <li><a href="index.html">Lab2 : Recipe</a></li>
         <li><a href="index.html">Lab3 : MovieReview</a></li>
     </ul>
