--- a/aboutme.html
+++ b/aboutme.html
@@ -30,16 +30,16 @@
         <ol>
             <li>Fringe <a href="https://www.rottentomatoes.com/tv/fringe">RottenTomatoes</a>
                 <ul>
-                    <li id="title">Excutive</li>
+                    <li class="title">Excutive</li>
                     <ul>
                         <li>J.J. Abrams, Jeff</li>
                     </ul>
 
-                    <li id="title">Gener</li>
+                    <li class="title">Gener</li>
                     <ul>
                         <li>Science Fiction & Fantasy</li>
                     </ul>
-                    <li id="title">Producers</li>
+                    <li class="title">Producers</li>
                     <ul>
                         <li>Pinkner, J.H. Wyman, Bryan Burk, Roberto Orci, Alex Kurtzman, Alex Graves, Alex Graves, Joe
                             Chappelle
@@ -50,16 +50,16 @@
             </li>
             <li>Gravity <a href="https://www.rottentomatoes.com/m/gravity_2013">RottenTomatoes</a>
                 <ul>
-                    <li id="title">Director</li>
+                    <li class="title">Director</li>
                     <ul>
                         <li>Alfonso Cuarón</li>
                     </ul>
 
-                    <li id="title">Gener</li>
+                    <li class="title">Gener</li>
                     <ul>
                         <li>Drama, Mystery And Thriller, Sci Fi</li>
                     </ul>
-                    <li id="title">Producers</li>
+                    <li class="title">Producers</li>
                     <ul>
                         <li>Alfonso Cuarón, David Heyman</li>
                     </ul>
@@ -67,16 +67,16 @@
             </li>
             <li>shawshank Redemption <a href="https://www.rottentomatoes.com/m/shawshank_redemption">RottenTomatoes</a>
                 <ul>
-                    <li id="title">Director</li>
+                    <li class="title">Director</li>
                     <ul>
                         <li>Frank Darabont</li>
                     </ul>
 
-                    <li id="title">Gener</li>
+                    <li class="title">Gener</li>
                     <ul>
                         <li>Drama</li>
                     </ul>
-                    <li id="title">Producers</li>
+                    <li class="title">Producers</li>
                     <ul>
                         <li>Niki Marvin</li>
                     </ul>
@@ -91,16 +91,16 @@
         <ol>
             <li>Fringe <a href="https://www.rottentomatoes.com/tv/fringe">RottenTomatoes</a>
                 <ul>
-                    <li id="title">Excutive</li>
+                    <li class="title">Excutive</li>
                     <ul>
                         <li>J.J. Abrams, Jeff</li>
                     </ul>
 
-                    <li id="title">Gener</li>
+                    <li class="title">Gener</li>
                     <ul>
                         <li>Science Fiction & Fantasy</li>
                     </ul>
-                    <li id="title">Producers</li>
+                    <li class="title">Producers</li>
                     <ul>
                         <li>Pinkner, J.H. Wyman, Bryan Burk, Roberto Orci, Alex Kurtzman, Alex Graves, Alex Graves, Joe
                             Chappelle
@@ -111,16 +111,16 @@
             </li>
             <li>Gravity <a href="https://www.rottentomatoes.com/m/gravity_2013">RottenTomatoes</a>
                 <ul>
-                    <li id="title">Director</li>
+                    <li class="title">Director</li>
                     <ul>
                         <li>Alfonso Cuarón</li>
                     </ul>
 
-                    <li id="title">Gener</li>
+                    <li class="title">Gener</li>
                     <ul>
                         <li>Drama, Mystery And Thriller, Sci Fi</li>
                     </ul>
-                    <li id="title">Producers</li>
+                    <li class="title">Producers</li>
                     <ul>
                         <li>Alfonso Cuarón, David Heyman</li>
                     </ul>
@@ -128,16 +128,16 @@
             </li>
             <li>shawshank Redemption <a href="https://www.rottentomatoes.com/m/shawshank_redemption">RottenTomatoes</a>
                 <ul>
-                    <li id="title">Director</li>
+                    <li class="title">Director</li>
                     <ul>
                         <li>Frank Darabont</li>
                     </ul>
 
-                    <li id="title">Gener</li>
+                    <li class="title">Gener</li>
                     <ul>
                         <li>Drama</li>
                     </ul>
-                    <li id="title">Producers</li>
+                    <li class="title">Producers</li>
                     <ul>
                         <li>Niki Marvin</li>
                     </ul>
