--- a/aboutme.html
+++ b/aboutme.html
@@ -31,9 +31,9 @@
             <li>Fringe <a href="https://www.rottentomatoes.com/tv/fringe">RottenTomatoes</a>
                 <ul>
                     <li class="title">Excutive</li>
-                    <ul>
+                    <ol>
                         <li>J.J. Abrams, Jeff</li>
-                    </ul>
+                    </ol>
 
                     <li class="title">Gener</li>
                     <ul>
@@ -152,11 +152,11 @@
 
     <div>
         <h2>My Moods</h2>
-        <label for="">Happy</label>
-        <img id="editImageSize" src="Images/Simien-Mountains-Waterfall.jpg" alt="Happy">
+        <label>Happy</label>
+        <img class="editImageSize" src="Images/Simien-Mountains-Waterfall.jpg" alt="Happy">
 
-        <label for="">Sad</label>
-        <img id="editImageSize" src="Images/sad.jpg" alt="Sad">
+        <label>Sad</label>
+        <img class="editImageSize" src="Images/sad.jpg" alt="Sad">
     </div>
     <div>
         <h2>Fun fact about my neighbours</h2>
