--- a/aboutme.html
+++ b/aboutme.html
@@ -29,57 +29,65 @@
         <h2>My favorite Movies In order</h2>
         <ol>
             <li>Fringe <a href="https://www.rottentomatoes.com/tv/fringe">RottenTomatoes</a>
-                <ol>
-                    <li class="title">Excutive</li>
-                    <ol>
-                        <li>J.J. Abrams, Jeff</li>
-                    </ol>
+                <ul>
+                    <li><b>Excutive</b>
+                        <ul>
+                            <li>J.J. Abrams, Jeff</li>
+                        </ul>
+                    </li>
 
-                    <li class="title">Gener</li>
-                    <ol>
-                        <li>Science Fiction & Fantasy</li>
-                    </ol>
-                    <li class="title">Producers</li>
-                    <ol>
-                        <li>Pinkner, J.H. Wyman, Bryan Burk, Roberto Orci, Alex Kurtzman, Alex Graves, Alex Graves, Joe
-                            Chappelle
-                        </li>
-                    </ol>
+                    <li><b>Gener</b>
+                        <ul>
+                            <li>Science Fiction & Fantasy</li>
+                        </ul>
+                    </li>
+                    <li><b>Producers</b>
+                        <ul>
+                            <li>Pinkner, J.H. Wyman, Bryan Burk, Roberto Orci, Alex Kurtzman, Alex Graves, Alex Graves,
+                                Joe
+                                Chappelle
+                            </li>
+                        </ul>
+                    </li>
 
-                </ol>
+                </ul>
             </li>
             <li>Gravity <a href="https://www.rottentomatoes.com/m/gravity_2013">RottenTomatoes</a>
                 <ul>
-                    <li class="title">Director</li>
-                    <ul>
-                        <li>Alfonso Cuarón</li>
-                    </ul>
-
-                    <li class="title">Gener</li>
-                    <ul>
-                        <li>Drama, Mystery And Thriller, Sci Fi</li>
-                    </ul>
-                    <li class="title">Producers</li>
-                    <ul>
-                        <li>Alfonso Cuarón, David Heyman</li>
-                    </ul>
+                    <li><b>Director</b>
+                        <ul>
+                            <li>Alfonso Cuarón</li>
+                        </ul>
+                    </li>
+                    <li><b>Gener</b>
+                        <ul>
+                            <li>Drama, Mystery And Thriller, Sci Fi</li>
+                        </ul>
+                    </li>
+                    <li><b>Producers</b>
+                        <ul>
+                            <li>Alfonso Cuarón, David Heyman</li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
             <li>shawshank Redemption <a href="https://www.rottentomatoes.com/m/shawshank_redemption">RottenTomatoes</a>
                 <ul>
-                    <li class="title">Director</li>
-                    <ul>
-                        <li>Frank Darabont</li>
-                    </ul>
-
-                    <li class="title">Gener</li>
-                    <ul>
-                        <li>Drama</li>
-                    </ul>
-                    <li class="title">Producers</li>
-                    <ul>
-                        <li>Niki Marvin</li>
-                    </ul>
+                    <li><b>Director</b>
+                        <ul>
+                            <li>Frank Darabont</li>
+                        </ul>
+                    </li>
+                    <li><b>Gener</b>
+                        <ul>
+                            <li>Drama</li>
+                        </ul>
+                    </li>
+                    <li><b>Producers</b>
+                        <ul>
+                            <li>Niki Marvin</li>
+                        </ul>
+                    </li>
 
                 </ul>
             </li>
