--- a/aboutme.html
+++ b/aboutme.html
@@ -183,12 +183,18 @@
     </div>
 
 
-    <a href="http://validator.w3.org/check/referer" rel="nofollow"> <img
+   
+
+
+    <p>
+        <a href="http://validator.w3.org/check/referer" rel="nofollow"> <img
             src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html-validator" /></a>
-
-
-    <a href="http://jigsaw.w3.org/css-validator/validator"> <img
-            src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="css-validator" /></a>
+            
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img src="https://jigsaw.w3.org/css-validator/images/vcss"
+                alt="Valid CSS!" />
+        </a>
+    </p>
 
 </body>
 
