--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <ul>
         <li><a href="index.html">Lab0 : HomePage</a></li>
         <li><a href="aboutme.html">Lab1 : AboutMe</a></li>
-        <li><a href="index.html">Lab2 : Recipe</a></li>
+        <li><a href="pie.html">Lab2 : Recipe</a></li>
         <li><a href="index.html">Lab3 : MovieReview</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check/referer"> <img 
-        src="http://www.w3.org/Icons/valid-xhtml10" alt="html validator"/></a>
+        src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"/></a>
     
 </body>
 </html>
