--- a/pie.html
+++ b/pie.html
@@ -29,16 +29,15 @@
             <li>1 cup white sugar</li>
             <li> <div class= "tbsp"> 2 <u>tbsp</u><span class="hide">tableSpoons</span> all-purpose flour </div></li>
             
-            <li> <div class= "tbsp"> 3 <u>tbsp</u><span class="hide">tableSpoons</span> cornstarch</li>
-            <div class="hide">tableSpoons</div>
+            <li> <div class= "tbsp"> 3 <u>tbsp</u><span class="hide">tableSpoons</span> cornstarch </div></li>
             <li><div class= "tsp"> 1/4 <u>tsp</u><span class="hide">teaSpoon</span> salt</li>
             <li>1 1/2 cups water</li>
             <li>2 lemons, juiced and zested</li>
-            <li> <div class= "tbsp"> 2 <u>tbsp</u><span class="hide">tableSpoons</span> butter</li>
+            <li> <div class= "tbsp"> 2 <u>tbsp</u><span class="hide">tableSpoons</span> butter</div></li>
             <li>4 egg yolks, beaten</li>
             <li>1 (9 inch) pie crust, baked</li>
             <li>4 egg whites</li>
-            <li><div class= "tbsp"> 6 <u>tbsp</u><span class="hide">tableSpoons</span> white sugar</li>
+            <li><div class= "tbsp"> 6 <u>tbsp</u><span class="hide">tableSpoons</span> white sugar</div></li>
         </ul>
     </div>
     <hr>
