--- a/pie.html
+++ b/pie.html
@@ -30,7 +30,7 @@
             <li> <div class= "tbsp"> 2 <u>tbsp</u><span class="hide">tableSpoons</span> all-purpose flour </div></li>
             
             <li> <div class= "tbsp"> 3 <u>tbsp</u><span class="hide">tableSpoons</span> cornstarch </div></li>
-            <li><div class= "tsp"> 1/4 <u>tsp</u><span class="hide">teaSpoon</span> salt</li>
+            <li><div class= "tsp"> 1/4 <u>tsp</u><span class="hide">teaSpoon</span> salt</div></li>
             <li>1 1/2 cups water</li>
             <li>2 lemons, juiced and zested</li>
             <li> <div class= "tbsp"> 2 <u>tbsp</u><span class="hide">tableSpoons</span> butter</div></li>
