--- a/aboutme.html
+++ b/aboutme.html
@@ -182,17 +182,12 @@
         </ul>
     </div>
 
-
-   
-
-
     <p>
         <a href="http://validator.w3.org/check/referer" rel="nofollow"> <img
-            src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html-validator" /></a>
-            
+                src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html-validator" /></a>
+
         <a href="https://jigsaw.w3.org/css-validator/check/referer">
-            <img src="https://jigsaw.w3.org/css-validator/images/vcss"
-                alt="Valid CSS!" />
+            <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
         </a>
     </p>
 
