--- a/aboutme.html
+++ b/aboutme.html
@@ -183,11 +183,11 @@
     </div>
 
     <p>
-        <a href="http://validator.w3.org/check/referer" rel="nofollow"> <img
+        <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/aboutme.html" rel="nofollow"> <img
                 src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html-validator" /></a>
 
-        <a href="https://jigsaw.w3.org/css-validator/check/referer">
-            <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://jocha50.github.io/Labs/aboutme.html">
+            <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"/>
         </a>
     </p>
 
