--- a/pie.html
+++ b/pie.html
@@ -130,10 +130,10 @@
 
         <div id="footer">
             <p>
-                <a href="http://validator.w3.org/check/referer" rel="nofollow"> <img
+                <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/pie.html" rel="nofollow"> <img
                         src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html-validator" /></a>
 
-                <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://jocha50.github.io/Labs/pie.html">
                     <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
                 </a>
             </p>
