--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="index.html">Lab3 : MovieReview</a></li>
     </ul>
 
-    <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/pie.html"> <img 
+    <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
         src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"/></a>
     
 </body>
