--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <img src="Images/YohannsNigatu.jpg" width="300" height="400" alt="">
     <h2>Yohanns Nigatu</h2>
     <ul>
-        <li><a href="index.html">Lab0 : HomePage</a></li>
-        <li><a href="aboutme.html">Lab1 : AboutMe</a></li>
-        <li><a href="pie.html">Lab2 : Recipe</a></li>
-        <li><a href="index.html">Lab3 : MovieReview</a></li>
+        <li><a href="index.html">Assignment 0 : HomePage</a></li>
+        <li><a href="aboutme.html">Assignment 1 : AboutMe</a></li>
+        <li><a href="pie.html">Assignment 2 : Recipe</a></li>
+        <li><a href="tmnt.html">Assignment 3 : MovieReview</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
