--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
-        src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="html validator"/></a>
+        src="Images/w3c-html.png" alt="html validator"/></a>
     
 </body>
 </html>
