--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="aboutme.html">Assignment 1 : AboutMe</a></li>
         <li><a href="pie.html">Assignment 2 : Recipe</a></li>
         <li><a href="tmnt.html">Assignment 3 : MovieReview</a></li>
+        <li><a href="grades.html">Assignment 4 : Retrieve Grades</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
