Nurdluv assignment added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="pie.html">Assignment 2 : Recipe</a></li>
         <li><a href="tmnt.html">Assignment 3 : MovieReview</a></li>
         <li><a href="grades.html">Assignment 4 : Retrieve Grades</a></li>
+        <li><a href="nerdLuv/index.php">Assignment 5 : NurdLuv</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
