--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <li><a href="pie.html">Assignment 2 : Recipe</a></li>
         <li><a href="tmnt.html">Assignment 3 : MovieReview</a></li>
         <li><a href="grades.html">Assignment 4 : Retrieve Grades</a></li>
+        <li><a href="javascriptExcercise/bugFixedPages.html">Assignment 5 : javascript Excercise</a></li>
+        <li><a href="onClickAlartExcercise/onClickAlart.html">Assignment 6 : onClick Alart Excercise</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
