--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         <li><a href="pie.html">Assignment 2 : Recipe</a></li>
         <li><a href="tmnt.html">Assignment 3 : MovieReview</a></li>
         <li><a href="grades.html">Assignment 4 : Retrieve Grades</a></li>
-        <li><a href="javascriptExcercise/bugFixedPages.html">Assignment 5 : javascript Excercise</a></li>
-        <li><a href="onClickAlartExcercise/onClickAlart.html">Assignment 6 : onClick Alart Excercise</a></li>
+        <li><a href="nerdLuv/index.php">Assignment 5 : NerdLuv(Sign-Up Forms)</a></li>
+        <li><a href="javascriptExcercise/bugFixedPages.html">Assignment 6 : javascript Excercise</a></li>
+        <li><a href="onClickAlartExcercise/onClickAlart.html">Assignment 7 : onClick Alart Excercise</a></li>
+        <li><a href="simpleCalculator/index.html">Assignment 8a : Simple calculator</a></li>
+        <li><a href="simpleCalculator/improvedSimpleCalculator/index.html">Assignment 8b : Improved Simple calculator</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
