Decorate My text added
and javascript exercise text file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <li><a href="onClickAlartExcercise/onClickAlart.html">Assignment 7 : onClick Alart Excercise</a></li>
         <li><a href="simpleCalculator/index.html">Assignment 8a : Simple calculator</a></li>
         <li><a href="simpleCalculator/improvedSimpleCalculator/index.html">Assignment 8b : Improved Simple calculator</a></li>
+        <li><a href="JavaScriptExcercise.txt">Assignment 9 : Javascript Excercise</a></li>
+        <li><a href="decorateMyText/decorateMyText.html">Assignment 10 : Decorate My Text</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
