--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="pie.html">Assignment 2 : Recipe</a></li>
         <li><a href="tmnt.html">Assignment 3 : MovieReview</a></li>
         <li><a href="grades.html">Assignment 4 : Retrieve Grades</a></li>
-        <li><a href="nerdLuv/index.php">Assignment 5 : NerdLuv(Sign-Up Forms)</a></li>
+        <li><a href="nerdLuv/index.html">Assignment 5 : NerdLuv(Sign-Up Forms)</a></li>
         <li><a href="javascriptExcercise/bugFixedPages.html">Assignment 6 : javascript Excercise</a></li>
         <li><a href="onClickAlartExcercise/onClickAlart.html">Assignment 7 : onClick Alart Excercise</a></li>
         <li><a href="simpleCalculator/index.html">Assignment 8a : Simple calculator</a></li>
