--- a/nerdLuv/signup.html
+++ b/nerdLuv/signup.html
@@ -85,12 +85,12 @@
 				</li>
 			</ul>
 
-			<a href="https://webster.cs.washington.edu/validate-html.php">
-				<img src="images/w3c-html5.png" alt="Valid HTML" />
-			</a>
-			<a href="https://webster.cs.washington.edu/validate-css.php">
-				<img src="images/w3c-css.png" alt="Valid CSS" />
-			</a>
+			<a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/nerdLuv/index.html" rel="nofollow"> <img
+                src="Images/w3c-html.png" alt="html-validator" /></a>
+      
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://jocha50.github.io/Labs/nerdLuv/index.html">
+            <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
+        </a>
 		</footer>
 	</body>
 </html>
