--- a/nerdLuv/confirm.html
+++ b/nerdLuv/confirm.html
@@ -51,7 +51,7 @@
 			</ul>
 
 			<a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/nerdLuv/index.html" rel="nofollow"> <img
-                src="Images/w3c-html.png" alt="html-validator" /></a>
+                src="../Images/w3c-html.png" alt="html-validator" /></a>
       
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://jocha50.github.io/Labs/nerdLuv/index.html">
             <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
