--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="simpleCalculator/improvedSimpleCalculator/index.html">Assignment 8b : Improved Simple calculator</a></li>
         <li><a href="JavaScriptExcercise.txt">Assignment 9 : Javascript Excercise</a></li>
         <li><a href="decorateMyText/decorateMyText.html">Assignment 10 : Decorate My Text</a></li>
+        <li><a href="javascriptAndASCIIWebPage/ascii.html">Assignment 11 : JavaScript And ASCII WebPage</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
