--- a/javascriptAndASCIIWebPage/ascii.html
+++ b/javascriptAndASCIIWebPage/ascii.html
@@ -64,7 +64,7 @@
             <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://jocha50.github.io/Labs/javascriptAndASCIIWebPage/ascii.css">
                 <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
             </a>
-            <a href="https://jshint.com/?uri=https://jocha50.github.io/Labs/javascriptAndASCIIWebPage/ascii.js">
+            <a href="https://jshint.com?uri=https://jocha50.github.io/Labs/javascriptAndASCIIWebPage/ascii.js">
                 <img src="https://webster.cs.washington.edu/w3c-js.png" alt="Valid JS" />
             </a>
         </p>
