assignment 12 and 13 added
12 - module pattern and bank account
13 - exercise  on scope

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li><a href="JavaScriptExcercise.txt">Assignment 9 : Javascript Excercise</a></li>
         <li><a href="decorateMyText/decorateMyText.html">Assignment 10 : Decorate My Text</a></li>
         <li><a href="javascriptAndASCIIWebPage/ascii.html">Assignment 11 : JavaScript And ASCII WebPage</a></li>
+        <li><a href="moduleAndClouser/prob1.html">Assignment 12a : Module Pattern (Problem1)</a></li>
+        <li><a href="moduleAndClouser/bankAccounts.html">Assignment 12b : Bank Accounts(Problem2)</a></li>
+        <li><a href="javascriptScopeExcercise.txt">Assignment 13 : JavaScript Scope Excercise</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
