--- a/javascriptAndASCIIWebPage/ascii.html
+++ b/javascriptAndASCIIWebPage/ascii.html
@@ -65,7 +65,7 @@
                 <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
             </a>
             <a href="https://jshint.com?uri=https://jocha50.github.io/Labs/javascriptAndASCIIWebPage/ascii.js">
-                <img src="https://webster.cs.washington.edu/w3c-js.png" alt="Valid JS" />
+                <img src="../Images/jshint-small.png" alt="Valid JS" />
             </a>
         </p>
     </div>
