--- a/javascriptAndASCIIWebPage/ascii.html
+++ b/javascriptAndASCIIWebPage/ascii.html
@@ -12,7 +12,7 @@
 <body>
     <h1>CS472: ASCII Animation Viewer</h1>
     <div class="mainScreen"></div>
-    <textarea name="" id="textArea" cols="80" rows="20">
+    <textarea id="textArea" cols="80" rows="20">
 
         </textarea>
 
@@ -20,12 +20,12 @@
         <fieldset>
             <legend>Play Control: </legend>
             <button id="start">Start</button>
-            <button  id="stop" disabled>Stop</button>
+            <button id="stop" disabled>Stop</button>
         </fieldset>
 
         <fieldset>
             <legend>Animation: </legend>
-            <select name="" id="animateLists">
+            <select id="animateLists">
                 <option value="BLANK">Blank</option>
                 <option value="EXERCISE">Exercise</option>
                 <option value="JUGGLER">Juggler</option>
@@ -37,8 +37,8 @@
 
         <fieldset>
             <legend>Size: </legend>
-            <select name="" id="textAreaFont">
-                 
+            <select id="textAreaFont">
+
                 <option value="TINY">Tiny</option>
                 <option value="SMALL">Small</option>
                 <option value="MEDIUM" selected>Medium</option>
@@ -50,18 +50,18 @@
 
         <fieldset>
             <legend>Speed: </legend>
-            <input type="checkbox" name="" id="checkBox">
+            <input type="checkbox" id="checkBox">
             <label for="checkBox">Turbo</label>
 
         </fieldset>
     </div>
-    </div>
     <div class="validator">
         <p>
-            <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/javascriptAndASCIIWebPage/ascii.html" rel="nofollow"> <img
-                    src="../Images/w3c-html.png" alt="html-validator" /></a>
+            <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/javascriptAndASCIIWebPage/ascii.html"
+                rel="nofollow"> <img src="../Images/w3c-html.png" alt="html-validator" /></a>
 
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://jocha50.github.io/Labs/javascriptAndASCIIWebPage/ascii.css">
+            <a
+                href="https://jigsaw.w3.org/css-validator/validator?uri=https://jocha50.github.io/Labs/javascriptAndASCIIWebPage/ascii.css">
                 <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" />
             </a>
             <a href="https://jshint.com?uri=https://jocha50.github.io/Labs/javascriptAndASCIIWebPage/ascii.js">
