--- a/moduleAndClouser/bankAccounts.html
+++ b/moduleAndClouser/bankAccounts.html
@@ -22,7 +22,7 @@
 
     <fieldset>
         <legend>List of Accounts: </legend>
-        <textarea name="" id="listOfAccounts" cols="80" rows="10"></textarea>
+        <textarea  id="listOfAccounts" cols="80" rows="10"></textarea>
     </fieldset>
     <div class="validator">
         <p>
