--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="moduleAndClouser/prob1.html">Assignment 12a : Module Pattern (Problem1)</a></li>
         <li><a href="moduleAndClouser/bankAccounts.html">Assignment 12b : Bank Accounts(Problem2)</a></li>
         <li><a href="javascriptScopeExcercise.txt">Assignment 13 : JavaScript Scope Excercise</a></li>
+        <li><a href="javascriptModuleExercises.txt">Assignment 14 : JavaScript Module Excercise</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
