--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <li><a href="moduleAndClouser/bankAccounts.html">Assignment 12b : Bank Accounts(Problem2)</a></li>
         <li><a href="javascriptScopeExcercise.txt">Assignment 13 : JavaScript Scope Excercise</a></li>
         <li><a href="javascriptModuleExercises.txt">Assignment 14 : JavaScript Module Excercise</a></li>
+        <li><a href="mouseMaze/maze.html">Assignment 15 : Mouse Maze</a></li>
+        <li><a href="jQueryQuizI.txt">Assignment 16 : jQuery Quiz I</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
