--- a/mouseMaze/maze.html
+++ b/mouseMaze/maze.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<!--
 	CSE 190 M Lab 7 HTML file
 	You should download this file for your lab, but you should not edit its contents.
@@ -60,6 +60,6 @@
 
         <script src="jquery-3.6.0.js"></script>
 	
-		<script src="maze.js" type="text/javascript"></script>
+		<script src="maze.js"></script>
 	</body>
 </html>
