--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="javascriptModuleExercises.txt">Assignment 14 : JavaScript Module Excercise</a></li>
         <li><a href="mouseMaze/maze.html">Assignment 15 : Mouse Maze</a></li>
         <li><a href="jQueryQuizI.txt">Assignment 16 : jQuery Quiz I</a></li>
+        <li><a href="jQueryQuizII.txt">Assignment 17 : jQuery Quiz II</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
