--- a/mouseMaze/maze.html
+++ b/mouseMaze/maze.html
@@ -58,7 +58,7 @@
 
 
 
-        <script src="jquery-3.6.0.js"></script>
+        <script src="../scripts/jquery-3.6.0.js"></script>
 	
 		<script src="maze.js"></script>
 	</body>
