--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <li><a href="mouseMaze/maze.html">Assignment 15 : Mouse Maze</a></li>
         <li><a href="jQueryQuizI.txt">Assignment 16 : jQuery Quiz I</a></li>
         <li><a href="jQueryQuizII.txt">Assignment 17 : jQuery Quiz II</a></li>
+        <li><a href="15Puzzle/fifteenPuzzle.html">Assignment 18 : 15Puzzle</a></li>
+        <li><a href="jQueryQuizIII.txt">Assignment 19 : jQueryQuizIII</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
