--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         <li><a href="jQueryQuizII.txt">Assignment 17 : jQuery Quiz II</a></li>
         <li><a href="15Puzzle/fifteenPuzzle.html">Assignment 18 : 15Puzzle</a></li>
         <li><a href="jQueryQuizIII.txt">Assignment 19 : jQueryQuizIII</a></li>
+        <li>Assignment 20 : Node js Exercise
+        <ul>
+            <li><a href="./nodejs/helloWorld.js">Exercise N1</a></li>
+            <li><a href="./nodejs/node.js">Exercise N2</a></li>
+            <li><a href="./nodejs/exerciseN3.js">Exercise N3</a></li>
+            <li><a href="./nodejs/simpleCalculator.html">Exercise N4</a></li>
+
+        </ul>
+        </li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
