--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
         </ul>
         </li>
+        
+        <li><a href="simpleCalculatorWithNodejs/calculator.html">Assignment 21 : simple calculator using Nodejs</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
