--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </li>
         
         <li><a href="simpleCalculatorWithNodejs/calculator.html">Assignment 21 : simple calculator using Nodejs</a></li>
+        <li><a href="numberQuizLab/numberQuiz.html">Assignment 22 : Number Quiz</a></li>
     </ul>
 
     <a href="http://validator.w3.org/check?uri=https://jocha50.github.io/Labs/index.html"> <img 
